fixed the looks on narrow devices

--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -52,17 +52,17 @@
     width: 520px;
 }
 
+.logos-section .container {
+    max-width: 1320px;
+    position: relative;
+}
+
 figure {
     display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 40px;
     margin-inline-end: 40px;
-}
-
-.container {
-    max-width: 1320px;
-    position: relative;
 }
 
 .app-stores {
@@ -82,14 +82,6 @@ figure {
 @media (max-width: 767.98px) {
     .cta-btns .mb-4 {
         margin-bottom: 0;
-    }
-}
-
-@media (max-width: 575.98px) {
-    .hero-section .figure-holder {
-        padding-bottom: 464px;
-        background-position: center 479px;
-        background-size: 300px auto;
     }
 }
 
@@ -119,15 +111,11 @@ figure {
 }
 
 .hero-section .figure-holder {
-    background: url(../images/hero-figure-light.png) no-repeat right top;
-    background-size: 480px auto;
-    min-height: 600px
+    background-image: url(../images/hero-figure-light.png);
 }
 
 .dark-mode .hero-section .figure-holder {
-    background: url(../images/hero-figure-dark.png) no-repeat right top;
-    background-size: 480px auto;
-    min-height: 600px
+    background-image: url(../images/hero-figure-dark.png);
 }
 
 figure.laptop-screen img {
